denyreg-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: denyreg
webhooks:
  - name: registry-admission
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Fail
    clientConfig:
      caBundle: "<CHANGEME>"
      url: "registry-admission-service.svc.default.cluster.local"
